[package]
name = "substrate-badger-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
app-crypto = { package = "sp-application-crypto", path = "../application-crypto", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
sp-runtime = { path = "../runtime", default-features = false }
rstd = { package = "sp-std", path = "../std", default-features = false }
serde = { version = "1.0.102", optional = true, features = ["derive"] }
threshold_crypto = {  git = "https://github.com/poanetwork/threshold_crypto", features = ["codec-support"],  default-features = false,optional=true }
sp-api = { path = "../api", default-features = false }
sp-core = { path = "../core", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"rstd/std",
	"serde",
	"app-crypto/std",
	"threshold_crypto"
]
