[package]
name = "substrate-mpecdsa-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-core = { path = "../core", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-runtime = { path = "../runtime", default-features = false }
rstd = { package = "sp-std", path = "../std", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
sp-api = { path = "../api", default-features = false }


[features]
default = ["std"]
std = [
	"sp-core/std",
	"codec/std",
	"sp-runtime/std",
	"rstd/std",
	"serde",
	"sp-api/std"
]
