[package]
name = "srml-badger"
version = "2.0.0"
authors = ["Not parity technologies"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives",  path = "../../core/primitives", default-features = false }
#substrate-badger-primitives= { path = "../../core/hbbft/primitives", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
session = { package = "srml-session", path = "../session", default-features = false }
finality-tracker = { package = "srml-finality-tracker", path = "../finality-tracker", default-features = false }
app-crypto = { package = "substrate-application-crypto", path = "../../core/application-crypto", default-features = false }


[dev-dependencies]
runtime_io = { package = "sr-io", path = "../../core/sr-io" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"primitives/std",
#	"substrate-badger-primitives/std",
	"rstd/std",
	"srml-support/std",
	"sr-primitives/std",
	"system/std",
	"session/std",
	"finality-tracker/std",
	"app-crypto/std"
]
