[package]
name = "substrate-badger-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", path = "../../client", default-features = false }
substrate-primitives = { path = "../../primitives", default-features = false }
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
sr-primitives = { path = "../../sr-primitives", default-features = false }
rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
badger = { package= "hbbft", path="../../../../hbbft" }
threshold_crypto = "0.3.1"
pairing = { version = "0.14.2", features = ["u128-support"] }
bincode = "1.0.1"
[features]
default = ["std"]
std = [
	"substrate-primitives/std",
	"client/std",
	"parity-codec/std",
	"sr-primitives/std",
	"rstd/std",
	"serde",
]
