[package]
name = "substrate-badger-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", path = "../../client", default-features = false }
app-crypto = { package = "substrate-application-crypto", path = "../../application-crypto", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
sr-primitives = { path = "../../sr-primitives", default-features = false }
rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
serde = { version = "1.0.102", optional = true, features = ["derive"] }
threshold_crypto = {  git = "https://github.com/poanetwork/threshold_crypto", features = ["codec-support"],  default-features = false,optional=true }

[features]
default = ["std"]
std = [
	"client/std",
	"codec/std",
	"sr-primitives/std",
	"rstd/std",
	"serde",
	"app-crypto/std",
	"threshold_crypto"
]
