[package]
name = "substrate-badger-rapi"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", path = "../../client", default-features = false }
#substrate-primitives = { path = "../../primitives", default-features = false }
#parity-codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
sr-primitives = { path = "../../sr-primitives", default-features = false }
#rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
#serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
[features]
default = ["std"]
std = [ 
	#"substrate-primitives/std",
	"client/std",
	#"parity-codec/std",
	"sr-primitives/std",
	#"rstd/std",
	#"serde",
	"codec/std",
]
