[package]
name = "substrate-hbbft-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hbbft = "0.1"
client = { package = "substrate-client", path = "../../client", default-features = false }
substrate-primitives = { path = "../../primitives", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-primitives = { path = "../../sr-primitives", default-features = false }
rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"substrate-primitives/std",
	"client/std",
	"codec/std",
	"sr-primitives/std",
	"rstd/std",
	"serde",
]
